--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
         .group-hover\:block .sub-menu { display: block; }
         .dark .dropdown-menu, .dark .sub-menu { background-color: #1f2937; border-color: #4b5563; }
 
-        /* MODIFICATION 1 & 2: Removed custom styles */
+        /* MODIFIED: Custom styles for border-radius and padding */
+        .rounded-lg {
+            border-radius: 0.3rem;
+        }
+        .py-8 {
+            padding-top: 1.5rem;
+            padding-bottom: 1.8rem;
+        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
