--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         .group-hover\:block .sub-menu { display: block; }
         .dark .dropdown-menu, .dark .sub-menu { background-color: #1f2937; border-color: #4b5563; }
 
-        /* MODIFIED: Custom styles for border-radius and padding */
+        /* MODIFIED: Added !important to ensure custom styles override defaults */
         .rounded-lg {
-            border-radius: 0.3rem;
+            border-radius: 0.3rem !important;
         }
         .py-8 {
-            padding-top: 1.5rem;
-            padding-bottom: 1.8rem;
+            padding-top: 1.5rem !important;
+            padding-bottom: 1.8rem !important;
         }
     </style>
 </head>
