--- a/index.html
+++ b/index.html
@@ -39,13 +39,22 @@
         .group-hover\:block .sub-menu { display: block; }
         .dark .dropdown-menu, .dark .sub-menu { background-color: #1f2937; border-color: #4b5563; }
 
-        /* MODIFIED: Added !important to ensure custom styles override defaults */
         .rounded-lg {
             border-radius: 0.3rem !important;
         }
         .py-8 {
             padding-top: 1.5rem !important;
             padding-bottom: 1.8rem !important;
+        }
+        
+        /* MODIFIED: Added new custom styles for background and border colors */
+        .bg-gray-50 {
+            --tw-bg-opacity: 1;
+            background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1)) !important; /* equivalent to #f5f5f5 */
+        }
+        .border-gray-200 {
+           --tw-border-opacity: 1;
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* equivalent to #f5f5f5 */
         }
     </style>
 </head>
