--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
         .border-gray-200 {
            --tw-border-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* equivalent to #f5f5f5 */
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) ; /* equivalent to #f5f5f5 */
         }
     </style>
 </head>
