--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         /* MODIFIED: Added new custom styles for background and border colors */
         .bg-gray-50 {
             --tw-bg-opacity: 1;
-            background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1)) ; /* equivalent to #f5f5f5 */
+            background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1)) !important; /* equivalent to #f5f5f5 */
         }
         .border-gray-200 {
            --tw-border-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) ; /* equivalent to #f5f5f5 */
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1))!important ; /* equivalent to #f5f5f5 */
         }
     </style>
 </head>
