--- a/index.html
+++ b/index.html
@@ -47,18 +47,14 @@
             padding-bottom: 1.8rem !important;
         }
         
-        /* MODIFIED: Added new custom styles for background and border colors */
-        .bg-gray-50 {
-            --tw-bg-opacity: 1;
-            background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1)) !important; /* equivalent to #f5f5f5 */
-        }
+        /* MODIFIED: Removed the problematic .bg-gray-50 override */
         .border-gray-200 {
            --tw-border-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1))!important ; /* equivalent to #f5f5f5 */
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* equivalent to #f5f5f5 */
         }
     </style>
 </head>
-<body class="bg-gray-50 text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
+<body class="bg-[#f5f5f5] text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
 
     <div id="app" class="flex flex-col min-h-screen"></div>
     
