--- a/index.html
+++ b/index.html
@@ -47,14 +47,24 @@
             padding-bottom: 1.8rem !important;
         }
         
-        /* MODIFIED: Removed the problematic .bg-gray-50 override */
         .border-gray-200 {
            --tw-border-opacity: 1;
             border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* equivalent to #f5f5f5 */
         }
+
+        /* MODIFIED: Explicitly define body background for light and dark modes */
+        body {
+            background-color: #f5f5f5;
+            transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 300ms;
+        }
+        .dark body {
+            background-color: #111827; /* This is Tailwind's gray-900 */
+        }
     </style>
 </head>
-<body class="bg-[#f5f5f5] text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
+<body class="text-gray-800 dark:text-gray-200">
 
     <div id="app" class="flex flex-col min-h-screen"></div>
     
