--- a/index.html
+++ b/index.html
@@ -47,12 +47,20 @@
             padding-bottom: 1.8rem !important;
         }
         
+        /* MODIFIED: Custom border styles for light and dark modes */
         .border-gray-200 {
            --tw-border-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* equivalent to #f5f5f5 */
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* #f5f5f5 */
+        }
+        .dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]) {
+            --tw-divide-opacity: 1;
+            border-color: rgb(245 245 245 / var(--tw-divide-opacity, 1)) !important; /* #f5f5f5 */
+        }
+        .dark .dark\:border-gray-700 {
+             --tw-border-opacity: 1;
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* #f5f5f5 */
         }
 
-        /* MODIFIED: Explicitly define body background for light and dark modes */
         body {
             background-color: #f5f5f5;
             transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
