--- a/index.html
+++ b/index.html
@@ -47,32 +47,14 @@
             padding-bottom: 1.8rem !important;
         }
         
-        /* MODIFIED: Custom border styles for light and dark modes */
+        /* MODIFIED: Removed the problematic .bg-gray-50 override */
         .border-gray-200 {
            --tw-border-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* #f5f5f5 */
-        }
-        .dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]) {
-            --tw-divide-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-divide-opacity, 1)) !important; /* #f5f5f5 */
-        }
-        .dark .dark\:border-gray-700 {
-             --tw-border-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* #f5f5f5 */
-        }
-
-        body {
-            background-color: #f5f5f5;
-            transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-duration: 300ms;
-        }
-        .dark body {
-            background-color: #111827; /* This is Tailwind's gray-900 */
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* equivalent to #f5f5f5 */
         }
     </style>
 </head>
-<body class="text-gray-800 dark:text-gray-200">
+<body class="bg-[#f5f5f5] text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
 
     <div id="app" class="flex flex-col min-h-screen"></div>
     
