--- a/index.html
+++ b/index.html
@@ -47,14 +47,29 @@
             padding-bottom: 1.8rem !important;
         }
         
-        /* MODIFIED: Removed the problematic .bg-gray-50 override */
+        /* MODIFIED: Updated border colors for dark mode */
         .border-gray-200 {
            --tw-border-opacity: 1;
-            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* equivalent to #f5f5f5 */
+            border-color: rgb(245 245 245 / var(--tw-border-opacity, 1)) !important; /* #f5f5f5 */
+        }
+        .dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]),
+        .dark .dark\:border-gray-700 {
+             --tw-border-opacity: 1;
+            border-color: rgb(31 41 55 / var(--tw-border-opacity, 1)) !important; /* gray-800 */
+        }
+
+        body {
+            background-color: #f5f5f5;
+            transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 300ms;
+        }
+        .dark body {
+            background-color: #111827; /* Tailwind's gray-900 */
         }
     </style>
 </head>
-<body class="bg-[#f5f5f5] text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
+<body class="text-gray-800 dark:text-gray-200">
 
     <div id="app" class="flex flex-col min-h-screen"></div>
     
@@ -397,7 +412,7 @@
                         : `<i class="fas fa-sun h-5 w-5"></i>`;
 
                     return `
-                    <header class="border-b border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-900">
+                    <header class="border-b border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800">
                         <div class="max-w-7xl mx-auto flex justify-between items-center h-[62px] px-4 sm:px-6 lg:px-8">
                             <div class="flex items-center gap-4">
                                 <a href="#" class="text-xl font-bold text-gray-900 dark:text-gray-100 flex items-center gap-2">
