--- a/index.html
+++ b/index.html
@@ -558,8 +558,8 @@
                 homePage: (posts, title = "最新文章") => {
                     return `
                         ${App.templates.carousel()}
-                        <div class="mt-8">
-                            <h1 class="text-[1.3rem] font-bold mb-[62px]">${title}</h1>
+                        <div class="mt-[18px]">
+                            <h1 class="text-[1.3rem] font-bold mb-2">${title}</h1>
                             <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700">
                                 <div class="divide-y divide-gray-200 dark:divide-gray-700">
                                     ${posts.length > 0 ? posts.map(post => App.templates.postCard(post)).join('') : '<p class="p-6">没有找到相关文章。</p>'}
