--- a/index.html
+++ b/index.html
@@ -410,8 +410,9 @@
                         ? `<i class="fal fa-moon h-5 w-5"></i>`
                         : `<i class="fal fa-sun h-5 w-5"></i>`;
 
+                    // MODIFIED: Added sticky classes
                     return `
-                    <header class="border-b border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800">
+                    <header class="sticky top-0 z-50 border-b border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800">
                         <div class="max-w-7xl mx-auto flex justify-between items-center h-[62px] px-4 sm:px-6 lg:px-8">
                             <div class="flex items-center gap-4">
                                 <a href="#" class="text-xl font-bold text-gray-900 dark:text-gray-100 flex items-center gap-2">
