--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         .rounded-lg {
             border-radius: 0.3rem !important;
         }
+        /* MODIFIED: New rule for .rounded-md */
+        .rounded-md {
+            border-radius: 0.1rem !important;
+        }
         .py-8 {
             padding-top: 1.5rem !important;
             padding-bottom: 1.8rem !important;
